fix(backend): skip null on search templates